feat: updated WebSockets for notification services